Fix #358 Modal/Dialog shifting content

--- a/src/scss/utils/_helpers.scss
+++ b/src/scss/utils/_helpers.scss
@@ -1,3 +1,6 @@
-.is-clipped {
-    overflow: hidden;
+.is-noscroll {
+    position: fixed;
+    overflow-y: hidden;
+    width: 100%;
+    bottom: 0;
 }
